# SymXplorer

./: .gitignore  README.md  output.txt  pyproject.toml  requirements.txt  setup.py  sortedCLI.txt
LegacyCode/: MAPLE_Single Hs-FD-good.maple  Single Hs-FD-good.mw  SymPy_Single Hs-FD-good.py
Lib/: AnalogSym.py  BaseTF.py  CircuitSetUp.py  Experiment.py  Filter.py  Global.py  Run.ipynb  RunExperiment.py  TestBench.ipynb  Utils.py  __init__.py
MacAnalog-Symbolix/: Circuit.py  CircuitSetUp.py  CircuitSolver.py  Experiment.py  Filter.py  Global.py  RunExperiment.py  TestBench.ipynb  Utils.py  __init__.py
MacAnalog_Symbolix/: Circuit.py  Experiment.py  Filter.py  Global.py  RunExperiment.py  Utils.py  __init__.py
Notebooks/: CS_Symbolic.ipynb  CS_testRun.dvi  CS_testRun.tex  MacAnalog-Symbolix-ClassImplementation.ipynb  SymPy_Analog-CG.ipynb  SymPy_Analog.ipynb
Notebooks/Outputs/: CG_testRun.tex  CS_testRun.tex
Runs/: cleanup.sh  movefile.sh  transfer_function_report.tex
Runs/CG_TIA_simple/: results.pkl
Runs/CG_Test_simple/: results.pkl
Runs/TIA_simple/: simple_Z1_Z2_ZL_object  simple_Z1_Z3_ZL_object  simple_Z1_Z4_ZL_object  simple_Z1_Z5_ZL_object  simple_Z1_ZL_object  simple_Z2_Z3_ZL_object  simple_Z2_Z4_ZL_object  simple_Z2_Z5_ZL_object  simple_Z2_ZL_object  simple_Z3_Z4_ZL_object  simple_Z3_Z5_ZL_object  simple_Z3_ZL_object  simple_Z4_Z5_ZL_object  simple_Z4_ZL_object  simple_Z5_ZL_object
Scripts/: CMMF_filters.ipynb  MacAnalog-Symbolix-ClassImplementation.ipynb  SymPy_Analog-CG.ipynb  SymPy_Analog-CS.ipynb  SymPy_Playground.ipynb  TIA_CMMF_filters.ipynb  TIA_CMMF_filters_with_GB_limitation.ipynb  TestBench.ipynb  TestTable.tex  VMMF_filters.ipynb  current_mode_multiple_feedback.ipynb  higher_order_analysis.ipynb  pyspice.ipynb  rl_tutorial.ipynb  skywater.ipynb  test.ipynb  testLatexGenerator.ipynb  test_visualizer.ipynb
data/schematics/: simple_highpass.asc
docs/: notes.txt
docs/Demo Circuits/: OPAMP_Details.txt
docs/LegacyCode/: Second_Order_Filters.m
examples/ltspice-sizing-bode/: test_ltspice_sizing.ipynb
examples/sym-exploration/: TIA_CMMF_filters.ipynb  (+2 more)
tests/: test.py  test_filter_1st_order.py  test_filter_biquad.py
(+180 files in other folders)
