[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SymCircuit"
version = "1.2.0"
description = "A symbolic circuit solver"
readme = "README.md"
# license = {file = "LICENSE"}
authors = [
    {name = "Danial, Noori Zadeh", email = "noorizad@mcmaster.com"}
]
requires-python = ">=3.10"
dependencies = [
    'pytest >= 8.2.2',
    'sympy >=1.13.3',
    'tqdm >= 4.67.1'
]

[project.scripts]
run-symbolix = "symcircuit.symbolic_solver.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/symcircuit"]
