[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SymXplorer"
version = "1.2.0"
description = "A symbolic circuit explorer and design tool with SPICE simulators binding"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Danial, Noori Zadeh", email = "noorizad@mcmaster.com"}
]
requires-python = ">=3.10"
dependencies = [
    'pytest >= 8.2.2',
    'sympy  >=1.13.3',
    'tqdm   >= 4.67.1',
    'pandas >= 2.2.3 ',
    'ax-platform >= 0.4.3',
    'matplotlib >= 3.9.3',
    'lcapy >= 1.24' # Optional: to automate extracting the nodal equations
]

[project.scripts]
run-symbolix = "symxplorer.symbolic_solver.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/symxplorer"]
